# calc-mcp

./: Cargo.toml  LICENSE  README.md  test_calc.json  test_input.json
src/: calculator.rs  calculator_tests.rs  main.rs
tests/: integration_tests.rs
